# gui-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  技术选型与showcase.md
docs/: Context Engineering.html
examples/: curl.sh  demo.py
gui_agent/: __init__.py
gui_agent/agent/: __init__.py  base.py  react_agent.py
gui_agent/config/: __init__.py  settings.py
gui_agent/tools/: __init__.py  base.py  keyboard.py  mouse.py  sandbox.py  screenshot.py  scroll.py
